# f1-strategist.ai

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  README.md  SPEC.md  TASKS.md  pyproject.toml
.claude/agents/: task-implementer.md
.claude/skills/scaffold/: SKILL.md
agents/: gap_monitor.py  orchestrator.py  safety_car_detector.py  tire_strategist.py
api/: main.py
core/: models.py  openf1_client.py
tests/: test_api.py  test_gap_monitor.py  test_openf1_client.py  test_orchestrator.py  test_safety_car_detector.py  test_tire_strategist.py
